--- a/page3.html
+++ b/page3.html
@@ -12,5 +12,33 @@
         <a href="page2.html">Unit 1, Outcome 1</a>
         <a href="page3.html">Unit 1, Review</a>
         <a href="page4.html">Unit 2</a>
-        <a href="page5.html">Contact</a>
+        <a href="page5.html">CV</a>
      </div>
+
+     <div class="box box3">
+        2.1
+        <p>
+        I am happy with using visual studio code because you can use it to write various different types of code without the need of having different software installed. I like that I can edit HTML, CSS and Javascript files at the same time and easily copy and paste code between different windows.
+        IntelliSense is a good feature in visual studio as when you type in code it predicts what you are going to type and gives you various suggestions for tags or elements.
+        Tag elements automatically close which makes coding easier so you don't accidentally forget to close a tag.
+        I like the colour picker in VS code as it makes it easy to edit the appearance of a website.
+        Visual studio makes it easy to create, edit and save HTML pages.
+    </p>
+     </div>
+     <div class="box box4">
+     2.2
+     <p>
+    Trello was a good tool to use when planning the project as I can easily see what I need to do for the assignment and can move items in progress to see what I'm currently working on.
+    Once I have completed a task I can then move it to the Done section.
+    Visual Studio was the best tool to use as it's an industry standard tool for creating HTML and CSS files.
+    </p>  
+    </div>
+    
+    <div class="box box5">
+        2.3
+        <p>
+        I am happy with my project but only had a limited time on the course to answer all the questions for the assignment as well as learning the code and then creating a website from what I have learnt.
+        If I could change the website I would have put in buttons instead of text hyper links.
+        I would of also put in some interactive content like a game if I had more time 
+       </p>
+    </div>
