--- a/page4.html
+++ b/page4.html
@@ -12,5 +12,27 @@
         <a href="page2.html">Unit 1, Outcome 1</a>
         <a href="page3.html">Unit 1, Review</a>
         <a href="page4.html">Unit 2</a>
-        <a href="page5.html">Contact</a>
+        <a href="page5.html">CV</a>
      </div>
+
+     <div class="box box3">
+3.1
+If the course was done in the code nation building it would have been easier to share ideas with the other students as you can easily look at each other's computers and ask other people for help easier. It is a bit more difficult to communicate over slack and zoom to share ideas.
+</div>
+<div class="box box4">
+3.2
+<p>
+You could improve efficiency by tracking and trying to limit how much time you spend on a specific task.
+There are tools you can put on your PC like “Rescue Time” which can let you know how much time you have spent on daily tasks like email, word processing and apps.
+Taking regular breaks helps to maintain constant performance and improve concentration.
+Setting self-imposed deadlines for each of your tasks enables you to be more focused.
+It's important not to be too much of a perfectionist. It is better to do the task to the best of your ability and move on rather than spending too much time trying to make it perfect. You can always come back to a task and improve it if necessary.
+Refrence https://www.inc.com/john-rampton/15-ways-to-increase-productivity-at-work.html
+</p>
+</div>
+<div class="box box5">
+3.3
+<p>
+Next time when implementing a digital project I would brainstorm ideas in a team on how to best implement the project. I would also spend more time looking at different website’s on the internet for inspiration.
+</p>
+</div>
