--- a/page2.html
+++ b/page2.html
@@ -45,7 +45,11 @@
             https://docs.microsoft.com/en-us/visualstudio/releases/2019/system-requirements
         </p>
          </div>
-        <div class="box box5">
+         <div class="box box5">
+         1.3
+            <a href="https://trello.com/b/SOscgHS8/assignment-1">Here is a link to my Trello board</a>
+        </div>
+        <div class="box box6">
             1.4
             <p>
             Digital projects can fail due to cost cutting approaches by allocating insufficient and small budgets which can result in less skilled projects. For successful projects it is good to have a team including business analysts, developers, testers and project managers.
@@ -59,7 +63,7 @@
             Reference https://reqtest.com/agile-blog/common-reasons-projects-fail/
            </p>
           </div>
-            <div class="box box6">
+            <div class="box box7">
            1.5
            <p>
            To Make sure you are using the correct IT systems and software it is important to research on google and read reviews and articles about various different technologies.
@@ -67,7 +71,7 @@
            </p>
            </div>
 
-            <div class="box box7">
+            <div class="box box8">
             1.6
             <p>
             Trello has helped me plan my project by creating a digital kanban board. I can put a lot of detail into each card to see what I need to do for each task. Once I have completed a task I can move it into the Done section on my Trello Board.
@@ -75,7 +79,7 @@
             </p>
             </div>
 
-            <div class="box box8">
+            <div class="box box9">
                 1.7
                 <p>
                 GDPR stands for General Data Protection Regulation it applies to all companies storing personal information about citizens of the EU.
