--- a/page4.html
+++ b/page4.html
@@ -15,24 +15,36 @@
         <a href="page5.html">CV</a>
      </div>
 
-     <div class="box box3">
-3.1
-If the course was done in the code nation building it would have been easier to share ideas with the other students as you can easily look at each other's computers and ask other people for help easier. It is a bit more difficult to communicate over slack and zoom to share ideas.
+<div class="box box3">
+1.5
+Copyright, Designs and Patents Act 1988 protects original creations involving works of literary, music, art, film and sound
+The Copyright (Computer Programs) Regulations 1992 extends protection to software.
+As soon as you post to your website it is automatically copyrighted under these laws.
+When inserting images into a website it is important to make sure they are Copyright and Royalty free. There are a number of different websites that offer royalty free images 
+I used lostandtaken.com
+Reference
+https://www.termsfeed.com/blog/website-copyright-law/#U_K
 </div>
 <div class="box box4">
-3.2
-<p>
-You could improve efficiency by tracking and trying to limit how much time you spend on a specific task.
-There are tools you can put on your PC like “Rescue Time” which can let you know how much time you have spent on daily tasks like email, word processing and apps.
-Taking regular breaks helps to maintain constant performance and improve concentration.
-Setting self-imposed deadlines for each of your tasks enables you to be more focused.
-It's important not to be too much of a perfectionist. It is better to do the task to the best of your ability and move on rather than spending too much time trying to make it perfect. You can always come back to a task and improve it if necessary.
-Refrence https://www.inc.com/john-rampton/15-ways-to-increase-productivity-at-work.html
+ 1.6
+ <p>
+UK Law states that a website should be made accessible to disabled users.
+If your website does not confirm to certain design standards you could be sued for discrimination.
+The Royal National Institute for the Blind has initiated legal action against companies in 2 cases.
+Companies need to make sure they are not discriminating against the blind as any court case action could damage their reputation.
+Visually impaired people can use a screen reader to translate the contents of web pages using speech synthesisers or Braille displays. If alt attributes are not added to all images tags the user would find it hard to understand what is on the page.
+
+Reference
+https://www.pinsentmasons.com/out-law/guides/disabled-access-to-websites-under-uk-law
 </p>
 </div>
 <div class="box box5">
-3.3
+1.7
 <p>
-Next time when implementing a digital project I would brainstorm ideas in a team on how to best implement the project. I would also spend more time looking at different website’s on the internet for inspiration.
-</p>
-</div>
+    Standard file formats for websites include 
+    HTML - Hypertext markup language almost all websites are written in HTML.
+    JPG  - Joint Photographic experts group file, this is a 16 bit format  capable of displaying millions of colours at once and is designed for photographs
+    PNG - Portable Network Graphics, PNG files are useful for web applications as you can use alpha channels to use effects such as translucent or opaque.
+    PDF - Portable document format, PDF files are useful as documents can be transferred and viewed on different computers and operating systems without the need for any special software other than a free PDF viewer.
+</p> 
+</div>   
